# cs337_project_2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
rasa/: UI.md  config.yml  credentials.yml  domain.yml  graph.html  index.html  script.js  style.css
rasa/actions/: actions.py
rasa/data/: nlu.yml  rules.yml  stories.yml
recipebot/: __init__.py  __main__.py  crawler.py  methods.py  model.py  parser.py  query.py  search.py  tools.py  ui.py
recipebot/hybrid/: agent.py  cli.py
recipebot/llm/: __init__.py  agent.py  cli.py
recipebot/parser/: __init__.py  methods.py  recipe.py  spacy_utils.py  step.py  tools.py
tests/: conftest.py  test_method.py  test_scraper.py  test_search.py  test_spacy_parser.py  test_step.py  test_tool.py
