[project]
name = "recipebot"
version = "0.1.0"
description = "Parsing recipes to support conversational interaction"
readme = "README.md"
authors = [{ name = "Group 4" }]
classifiers = [
  # TODO
]
license = { text = "MIT" }
dependencies = [
  "ftfy>=6.3.1",
  "nltk>=3.9.2",
  "spacy>=3.8.7",
  "typer",
  "unidecode>=1.4.0",
  "thefuzz>=0.22.1",
  "requests>=2.32.5",
  "beautifulsoup4>=4.14.2",
  "rich>=14.2.0",
  "types-requests>=2.32.4.20250913",
  "python-dotenv>=1.2.1",
  "yt-dlp>=2025.11.12",
  "ddgs>=9.9.1",
  "pydantic<1.10.10",
  "rasa>=3.6.0,<3.7.0",
  "sqlalchemy<2.0",
  "number-parser>=0.3.2",
  "packaging<22.0",
]
requires-python = ">= 3.10"

[dependency-groups]
dev = [
  "recipe-scrapers>=15.10.0",
  "coverage",                 # testing
  "pytest",                   # testing
  "ruff",                     # linting
  "ty",                       # checking types
  "ipdb",                     # debugging
  "rich>=14.1.0",
]

[project.urls]
bugs = "https://github.com/cauliyang/cs337_project_2/issues"
homepage = "https://github.com/cauliyang/cs337_project_2"

[project.scripts]
recipebot = "recipebot.__main__:app"

[tool.setuptools.packages.find]
where = ["."] # Current directory

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ty.src]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]

[tool.uv]
package = true
