[project]
name = "recipebot"
version = "0.1.0"
description = "Parsing recipes to support conversational interaction"
readme = "README.md"
authors = [{ name = "Group 4" }]
classifiers = [
  # TODO
]
license = { text = "MIT" }
dependencies = [
  "requests>=2.32.5",
  "beautifulsoup4>=4.14.2",
  "rich>=14.2.0",
  "types-requests>=2.32.4.20250913",
  "yt-dlp>=2025.11.12",
  "ddgs>=9.9.1",
  "typer>=0.20.0",
  "pydantic>=1.10.9",
  "spacy>=3.8.11",
  "number-parser>=0.3.2",
]
requires-python = ">= 3.10"

[tool.uv]
conflicts = [[{ extra = "llm" }, { extra = "rasa" }]]
package = true

[project.optional-dependencies]
llm = [
  "fastapi>=0.123.5",
  "logfire>=4.15.1",
  "python-dotenv>=1.2.1",
  "pydantic-ai[examples]>=1.26.0",
  "google-generativeai>=0.8.0",
]
rasa = [
  "pydantic<1.10.10",
  "sqlalchemy<2.0",
  "rasa>=3.6.21",
  "number-parser>=0.3.2",
  "spacy>=3.8.11",
  "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
]

[dependency-groups]
dev = [
  "recipe-scrapers>=15.10.0",
  "coverage",                 # testing
  "pytest",                   # testing
  "ruff",                     # linting
  "ty",                       # checking types
  "ipdb",                     # debugging
  "rich>=14.1.0",
]

[project.urls]
bugs = "https://github.com/cauliyang/cs337_project_2/issues"
homepage = "https://github.com/cauliyang/cs337_project_2"

[project.scripts]

[tool.setuptools.packages.find]
where = ["."] # Current directory

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ty.src]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
